--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "Sudipta Pran Bhattacharyya",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
+    "mongoose": "^5.8.5",
+    "multer": "^1.4.2"
   }
 }
